add. ch1.kubernetes 기본 개념 추가

--- a/_config.yml
+++ b/_config.yml
@@ -328,3 +328,10 @@ defaults:
       comments: # true
       share: true
       related: true
+
+# Google Drive Image Prefix
+gdrive_url_prefix: "https://drive.google.com/uc?id="
+
+
+
+
