fix. config설정 baseurl제거

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ subtitle                 : ""
 name                     : "otter_song"
 description              : "Development Journal"
 url                      : "https://ottersong.github.io"
-baseurl                  : "/otter_song.github.io"
+baseurl                  : ""
 repository               : "ottersong.github.io"
 teaser                   : "/assets/images/otter.jpg"
 logo                     : "/assets/images/otter.jpg"
